[package]
name = "RcNodeSelector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
clap = { version = "4.2.5", features = ["derive"] }
crossbeam = "0.8.2"
serde = { version = "1.0.160", features = ["derive"] }
